workloads/routing/gateway/dev/patch-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eco2-gateway
  namespace: istio-system
spec:
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - api.dev.growbin.app
    - argocd.dev.growbin.app
    - grafana.dev.growbin.app
